--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@
 db.sqlite3
 *settings.py
 packapp1/newfile.html
-main_app/__pycache__/
+main_app/__pycache__
+packapp1/__pycache__
+.gitignore
+testytestesttester
