--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 *.env
-db.sqlite3
+*db.sqlite3
 *settings.py
-packapp1/newfile.html
-main_app/__pycache__
-packapp1/__pycache__
+*/__pyache__
+*__pyache__
 *.gitignore
-testytestesttester
-askdjaskdj
