--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": false,
+    "html.format.enable": false,
+    "html.format.wrapLineLength": 0,
 }
