--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astroid==2.4.2
 attrs==20.3.0
 autobahn==20.12.3
 Automat==20.2.0
+backtrader==1.9.76.123
 boto3==1.17.42
 botocore==1.20.42
 certifi==2020.12.5
@@ -23,7 +24,10 @@ django-heroku==0.3.1
 django-phone-field==1.8.1
 djangorestframework==3.12.2
 docopt==0.6.2
+environ==1.0
 filelock==3.0.12
+Flask==1.1.2
+Flask-Cors==3.0.10
 gunicorn==20.1.0
 hyperlink==21.0.0
 idna==2.10
@@ -36,6 +40,7 @@ jmespath==0.10.0
 kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+matplotlib==3.2.2
 mccabe==0.6.1
 numpy==1.20.0
 pandas==1.2.1
@@ -50,6 +55,10 @@ pylint==2.6.0
 pymongo==3.11.3
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.8.1
+python-binance==0.7.9
 python-dateutil==2.8.1
 python-dotenv==0.17.0
 pytz==2021.1
@@ -59,6 +68,7 @@ s3transfer==0.3.6
 service-identity==18.1.0
 six==1.15.0
 sqlparse==0.2.4
+TA-Lib==0.4.19
 toml==0.10.2
 Twisted==20.3.0
 txaio==20.12.1
