--- a/requirements.txt
+++ b/requirements.txt
@@ -38,8 +38,8 @@ kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-numpy==1.20.0
-pandas==1.2.1
+# numpy==1.20.0
+# pandas==1.2.1
 pipreqs==0.4.10
 psycopg2==2.8.6
 psycopg2-binary==2.8.3
